--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,7 @@ body {
   font-size: 16px;
 }
 
-h2 {
+.operation-title, .restaurant-title {
   font-size: 24px;
 }
 
@@ -21,14 +21,22 @@ h3 {
 .header {
   display: flex;
   justify-content: center;
-  align-items: center;
+  padding: 25px;
   height: 65px;
   box-shadow: 0px 1px 6px #7e7e7e;
   position: relative;
   z-index: 10;
 }
 .header__logo {
-  height: 25px;
+  height: 27px;
+}
+.header__return-icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 25px;
+  font-size: 20px;
+  color: #353535;
 }
 
 .localisation {
@@ -212,6 +220,63 @@ h3 {
 .footer__icon i {
   font-size: 13px;
   color: white;
+}
+
+.menu {
+  position: relative;
+}
+
+.menu-image {
+  width: 100%;
+}
+
+.menu-body {
+  margin-top: -40px;
+  position: relative;
+  background-color: #f6f6f6;
+  padding: 0 20px;
+  border-radius: 40px 40px 0 0;
+}
+
+.food {
+  display: flex;
+  z-index: 2;
+  padding-top: 20px;
+  width: 100%;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+.food__title {
+  font-family: "Shrikhand", cursive;
+  font-size: 26px;
+}
+.food__icon {
+  font-size: 24px;
+  padding: 0 15px 10px 0;
+}
+
+.dishes-title {
+  font-size: 13px;
+  font-weight: 300;
+}
+
+.dishes-card {
+  display: flex;
+  background-color: white;
+  justify-content: space-between;
+  align-items: flex-end;
+  border-radius: 15px;
+  box-shadow: 1px 7px 9px #eaeaea;
+  margin-bottom: 15px;
+  padding: 10px;
+}
+.dishes-card__title {
+  margin-bottom: 3px;
+}
+.dishes-card__price {
+  font-weight: bold;
+  color: #353535;
+  padding-right: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
