--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,8 @@ body {
   font-size: 16px;
 }
 
-.operation-title, .restaurant-title {
+.operation-title,
+.restaurant-title {
   font-size: 24px;
 }
 
@@ -67,15 +68,15 @@ h3 {
 }
 
 .button {
-  height: 50px;
+  width: 220px;
   border-radius: 50px;
   border: none;
   color: white;
   background: linear-gradient(to bottom right, #ff79da, #9356dc);
-  padding: 0 20px;
+  padding: 15px 5%;
   margin: 0 0 57px 0;
   font-size: 15px;
-  box-shadow: 1px 7px 9px #7e7e7e;
+  box-shadow: 1px 8px 4px #eaeaea;
 }
 
 .operation,
@@ -95,6 +96,15 @@ h3 {
   margin-bottom: 25px;
 }
 
+@media (min-width: 768px) {
+  .operation-container {
+    display: flex;
+  }
+
+  .operation-card {
+    flex: 25%;
+  }
+}
 .operation-card {
   display: flex;
   height: 75px;
@@ -145,6 +155,15 @@ h3 {
   margin: 50px 0 30px 0;
 }
 
+@media (min-width: 768px) {
+  .restaurant-container {
+    display: flex;
+  }
+
+  .restaurant-card {
+    flex: 25%;
+  }
+}
 .restaurant-card {
   height: 250px;
   display: flex;
@@ -194,6 +213,8 @@ h3 {
 
 .footer {
   background-color: #353535;
+  display: flex;
+  flex-direction: column;
 }
 .footer__logo {
   font-family: "Shrikhand", cursive;
@@ -222,6 +243,17 @@ h3 {
   color: white;
 }
 
+@media (min-width: 768px) {
+  .footer {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .footer__link:last-child {
+    padding-bottom: 5px;
+  }
+}
 .menu {
   position: relative;
 }
@@ -255,9 +287,31 @@ h3 {
   padding: 0 15px 10px 0;
 }
 
+@media (min-width: 768px) {
+  .dish-types {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .dishes:not(:last-child) {
+    margin-right: 10px;
+  }
+}
+.dishes {
+  display: flex;
+  flex-direction: column;
+}
+
 .dishes-title {
-  font-size: 13px;
-  font-weight: 300;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.dishes-line {
+  height: 3px;
+  width: 40px;
+  background-color: #99e2d0;
+  margin: 5px 0 15px 0;
 }
 
 .dishes-card {
@@ -277,6 +331,27 @@ h3 {
   font-weight: bold;
   color: #353535;
   padding-right: 10px;
+  font-size: 15px;
+}
+
+.dishes,
+.box-button {
+  margin-top: 35px;
+}
+
+.box-button {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 30px;
+}
+
+@media (min-width: 768px) {
+  .box-button {
+    padding-bottom: unset;
+  }
+}
+.button--small {
+  width: 180px;
 }
 
 /*# sourceMappingURL=style.css.map */
