--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,387 +1,14 @@
 // @import-normalize;
 @import "./utils/variables";
+@import "./base/typography";
+@import "./base/base";
+@import "./component/buttons";
+@import "./layout/header";
+@import "./layout/footer";
+@import "./pages/home";
+@import "./pages/menu";
 
-/*mobile first*/
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
-body {
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-}
 
-.operation-title,
-.restaurant-title {
-  font-size: 24px;
-}
 
-h3 {
-  font-size: 18px;
-}
 
-.header {
-  display: flex;
-  justify-content: center;
-  padding: 25px;
-  height: 65px;
-  box-shadow: 0px 1px 6px $icon-color;
-  position: relative;
-  z-index: 10;
-  &__logo {
-    height: 27px;
-  }
-  &__return-icon {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 25px;
-    font-size: 20px;
-    color: $dark-grey;
-  }
-}
-
-.localisation {
-  display: flex;
-  justify-content: center;
-  background-color: $grey;
-  padding: 20px;
-  &__icon {
-    margin-right: 15px;
-    color: $dark-grey;
-  }
-}
-
-.book {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: $light-grey;
-  &__title {
-    font-size: 23px;
-    padding: 20px 70px;
-    text-align: center;
-  }
-  &__subtitle {
-    text-align: center;
-    padding: 0 40px 35px 40px;
-  }
-}
-
-.button {
-  width: 220px;
-  border-radius: 50px;
-  border: none;
-  color: white;
-  background: linear-gradient(
-    to bottom right,
-    $color-secondary,
-    $color-primary
-  );
-  padding: 15px 5%;
-  margin: 0 0 57px 0;
-  font-size: 15px;
-  box-shadow: 1px 8px 4px $grey;
-}
-
-.operation,
-.restaurant,
-.footer {
-  padding: 0 20px;
-}
-
-.operation {
-  margin-top: 53px;
-  margin-bottom: 60px;
-  display: flex;
-  flex-direction: column;
-}
-
-.operation-title {
-  margin-bottom: 25px;
-}
-
-@media (min-width: 768px) {
-  .operation-container {
-    display: flex;
-  }
-
-  .operation-card {
-    flex: 25%;
-    // padding-left: 20px;
-  }
-}
-
-.operation-card {
-  display: flex;
-  height: 75px;
-  background-color: $light-grey;
-  margin: 11px 0 11px 10px;
-  border-radius: 20px;
-  align-items: center;
-  box-shadow: 1px 7px 9px $grey;
-  &__number {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 25px;
-    width: 25px;
-    background-color: $color-primary;
-    border-radius: 50%;
-    z-index: 1;
-    color: white;
-    margin: 0 0 0 -10px;
-    font-size: 14px;
-  }
-  &__icon,
-  &__text {
-    margin-left: 20px;
-  }
-  &__icon {
-    font-size: 18px;
-    color: $icon-color;
-  }
-  &__icon--color {
-    color: $color-primary;
-  }
-  &__text {
-    font-weight: bold;
-  }
-}
-
-.operation-card--color {
-  background-color: $color-primary-light;
-}
-
-.restaurant {
-  background-color: $light-grey;
-  display: flex;
-  flex-direction: column;
-}
-
-.restaurant-title {
-  margin: 50px 0 30px 0;
-}
-
-@media (min-width: 768px) {
-  .restaurant-container {
-    display: flex;
-    
-  }
-
-  .restaurant-card {
-    flex: 25%;
-  }
-}
-
-.restaurant-card {
-  height: 250px;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  background-color: white;
-  margin-bottom: 20px;
-  border-radius: 10px;
-  box-shadow: 1px 7px 9px $grey;
-  &__image {
-    width: 100%;
-    height: 70%;
-    object-fit: cover;
-    border-radius: 10px 10px 0 0;
-  }
-  &--new {
-    position: absolute;
-    top: 12px;
-    right: 10px;
-    padding: 5px 10px;
-    background-color: $color-ternary;
-    font-size: 14px;
-    color: $color-ternary-dark;
-    font-weight: bold;
-    border-radius: 2px;
-  }
-  &__description {
-    display: flex;
-    justify-content: space-between;
-    margin: 15px 10px;
-  }
-  &__text {
-    display: flex;
-    flex-direction: column;
-  }
-  &__title {
-    padding-bottom: 3px;
-  }
-  &__icon {
-    font-size: 23px;
-  }
-}
-
-.restaurant-card:last-child {
-  margin-bottom: 60px;
-}
-
-.footer {
-  background-color: $dark-grey;
-  display: flex;
-  flex-direction: column;
-  &__logo {
-    font-family: "Shrikhand", cursive;
-    font-size: 18px;
-    color: white;
-    padding: 20px 0;
-  }
-  a {
-    text-decoration: none;
-    color: white;
-  }
-  &__link {
-    display: flex;
-    padding-bottom: 5px;
-  }
-  &__link:last-child {
-    padding-bottom: 30px;
-  }
-  &__icon {
-    height: 20px;
-    width: 20px;
-    margin-right: 5px;
-    i {
-      font-size: 13px;
-      color: white;
-    }
-  }
-}
-
-@media (min-width: 768px) {
-  .footer {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .footer__link:last-child {
-    padding-bottom: 5px;
-  }
-}
-
-// menus
-
-.menu {
-  position: relative;
-}
-
-.menu-image {
-  width: 100%;
-}
-
-.menu-body {
-  margin-top: -40px;
-  position: relative;
-  background-color: $light-grey;
-  padding: 0 20px;
-  border-radius: 40px 40px 0 0;
-  // position: relative;
-  // top: -40px;
-}
-
-.food {
-  // position: absolute;
-  display: flex;
-  z-index: 2;
-  // margin: -40px 0 0 0;
-  padding-top: 20px;
-  // height: 70px;
-  width: 100%;
-  justify-content: space-between;
-  align-items: flex-end;
-  &__title {
-    font-family: "Shrikhand", cursive;
-    font-size: 26px;
-  }
-  &__icon {
-    font-size: 24px;
-    padding: 0 15px 10px 0;
-  }
-}
-
-// section:first-of-type {
-//   padding: 60px 20px 0 20px;
-// }
-@media (min-width: 768px) {
-  .dish-types {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .dishes:not(:last-child) {
-    margin-right: 10px;
-  }
-}
-
-.dishes {
-  display: flex;
-  flex-direction: column;
-}
-
-.dishes-title {
-  font-size: 16px;
-  font-weight: 400;
-}
-
-// .dishes-card {
-//   display: flex;
-//   flex-direction: column;
-// }
-
-.dishes-line {
-  height: 3px;
-  width: 40px;
-  background-color: $color-ternary;
-  margin: 5px 0 15px 0;
-}
-
-.dishes-card {
-  display: flex;
-  background-color: white;
-  justify-content: space-between;
-  align-items: flex-end;
-  border-radius: 15px;
-  box-shadow: 1px 7px 9px $grey;
-  margin-bottom: 15px;
-  padding: 10px;
-  &__title {
-    margin-bottom: 3px;
-    // text-overflow: ellipsis;
-    // white-space: nowrap;
-  }
-  &__price {
-    font-weight: bold;
-    color: $dark-grey;
-    padding-right: 10px;
-    font-size: 15px;
-  }
-}
-
-.dishes,
-.box-button {
-  margin-top: 35px;
-}
-
-.box-button {
-  display: flex;
-  justify-content: center;
-  padding-bottom: 30px;
-}
-
-@media (min-width: 768px) {
-  .box-button {
-    padding-bottom: unset;
-  }
-}
-
-.button--small {
-  width: 180px;
-}
