--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-/*mobile first*/
 * {
   margin: 0;
   padding: 0;
@@ -10,13 +9,33 @@ body {
   font-size: 16px;
 }
 
-.operation-title,
-.restaurant-title {
-  font-size: 24px;
+a {
+  text-decoration: none;
+  color: black;
 }
 
 h3 {
   font-size: 18px;
+}
+
+.button {
+  width: 220px;
+  border-radius: 50px;
+  border: none;
+  color: white;
+  background: linear-gradient(to bottom right, #ff79da 0%, #9356dc 100%);
+  padding: 15px;
+  margin: 0 0 57px 0;
+  font-size: 15px;
+  box-shadow: 1px 8px 4px #eaeaea;
+}
+.button:hover {
+  background: linear-gradient(to bottom right, #fface8 0%, #ae80e5 100%);
+  box-shadow: 1px 8px 10px #d6d6d6;
+}
+
+.button--small {
+  width: 180px;
 }
 
 .header {
@@ -38,6 +57,54 @@ h3 {
   padding: 25px;
   font-size: 20px;
   color: #353535;
+}
+
+.footer {
+  background-color: #353535;
+  display: flex;
+  flex-direction: column;
+}
+.footer__logo {
+  font-family: "Shrikhand", cursive;
+  font-size: 18px;
+  color: white;
+  padding: 20px 0;
+}
+.footer a {
+  text-decoration: none;
+  color: white;
+}
+.footer__link {
+  display: flex;
+  padding-bottom: 5px;
+}
+.footer__link:last-child {
+  padding-bottom: 30px;
+}
+.footer__icon {
+  height: 20px;
+  width: 20px;
+  margin-right: 5px;
+}
+.footer__icon i {
+  font-size: 13px;
+  color: white;
+}
+
+@media (min-width: 768px) {
+  .footer {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .footer__link:last-child {
+    padding-bottom: 5px;
+  }
+}
+.operation-title,
+.restaurant-title {
+  font-size: 24px;
 }
 
 .localisation {
@@ -67,18 +134,6 @@ h3 {
   padding: 0 40px 35px 40px;
 }
 
-.button {
-  width: 220px;
-  border-radius: 50px;
-  border: none;
-  color: white;
-  background: linear-gradient(to bottom right, #ff79da, #9356dc);
-  padding: 15px 5%;
-  margin: 0 0 57px 0;
-  font-size: 15px;
-  box-shadow: 1px 8px 4px #eaeaea;
-}
-
 .operation,
 .restaurant,
 .footer {
@@ -96,20 +151,11 @@ h3 {
   margin-bottom: 25px;
 }
 
-@media (min-width: 768px) {
-  .operation-container {
-    display: flex;
-  }
-
-  .operation-card {
-    flex: 25%;
-  }
-}
 .operation-card {
   display: flex;
   height: 75px;
   background-color: #f6f6f6;
-  margin: 11px 0 11px 10px;
+  margin: 22px 0 0 10px;
   border-radius: 20px;
   align-items: center;
   box-shadow: 1px 7px 9px #eaeaea;
@@ -134,17 +180,28 @@ h3 {
   font-size: 18px;
   color: #7e7e7e;
 }
-.operation-card__icon--color {
-  color: #9356dc;
-}
 .operation-card__text {
   font-weight: bold;
 }
 
-.operation-card--color {
+.operation-card--color:hover {
   background-color: #f5edff;
 }
+.operation-card--color:hover .operation-card__icon--color {
+  color: #9356dc;
+}
 
+@media (min-width: 1024px) {
+  .operation-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .operation-card {
+    flex: 25%;
+    margin: 0 15px 0 15px;
+  }
+}
 .restaurant {
   background-color: #f6f6f6;
   display: flex;
@@ -158,10 +215,17 @@ h3 {
 @media (min-width: 768px) {
   .restaurant-container {
     display: flex;
+    flex-wrap: wrap;
   }
 
   .restaurant-card {
-    flex: 25%;
+    flex: 34%;
+    margin: 0 10px;
+  }
+}
+@media (min-width: 1440px) {
+  .restaurant-container {
+    flex-wrap: unset;
   }
 }
 .restaurant-card {
@@ -211,55 +275,14 @@ h3 {
   margin-bottom: 60px;
 }
 
-.footer {
-  background-color: #353535;
-  display: flex;
-  flex-direction: column;
-}
-.footer__logo {
-  font-family: "Shrikhand", cursive;
-  font-size: 18px;
-  color: white;
-  padding: 20px 0;
-}
-.footer a {
-  text-decoration: none;
-  color: white;
-}
-.footer__link {
-  display: flex;
-  padding-bottom: 5px;
-}
-.footer__link:last-child {
-  padding-bottom: 30px;
-}
-.footer__icon {
-  height: 20px;
-  width: 20px;
-  margin-right: 5px;
-}
-.footer__icon i {
-  font-size: 13px;
-  color: white;
-}
-
-@media (min-width: 768px) {
-  .footer {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .footer__link:last-child {
-    padding-bottom: 5px;
-  }
-}
 .menu {
   position: relative;
 }
 
 .menu-image {
   width: 100%;
+  height: 260px;
+  object-fit: cover;
 }
 
 .menu-body {
@@ -287,10 +310,13 @@ h3 {
   padding: 0 15px 10px 0;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   .dish-types {
     display: flex;
-    justify-content: space-between;
+  }
+
+  .dishes {
+    flex: 30%;
   }
 
   .dishes:not(:last-child) {
@@ -349,9 +375,6 @@ h3 {
   .box-button {
     padding-bottom: unset;
   }
-}
-.button--small {
-  width: 180px;
 }
 
 /*# sourceMappingURL=style.css.map */
