add hearts animation

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import "./base/typography";
 @import "./base/base";
 @import "./component/buttons";
+@import "./layout/heart-icons";
 @import "./layout/header";
 @import "./layout/footer";
 @import "./pages/home";
