--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,6 +38,19 @@ h3 {
   width: 180px;
 }
 
+.restaurant-card__icon .fas, .food__icon .fas {
+  color: transparent;
+  background-image: linear-gradient(to bottom right, #ff79da, #9356dc);
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 0;
+  transition: all 300ms ease-out;
+}
+.restaurant-card__icon .fas:hover, .food__icon .fas:hover {
+  opacity: 1;
+  transform: scale(1.2);
+}
+
 .header {
   display: flex;
   justify-content: center;
@@ -212,22 +225,6 @@ h3 {
   margin: 50px 0 30px 0;
 }
 
-@media (min-width: 768px) {
-  .restaurant-container {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .restaurant-card {
-    flex: 34%;
-    margin: 0 10px;
-  }
-}
-@media (min-width: 1440px) {
-  .restaurant-container {
-    flex-wrap: unset;
-  }
-}
 .restaurant-card {
   height: 250px;
   display: flex;
@@ -275,6 +272,22 @@ h3 {
   margin-bottom: 60px;
 }
 
+@media (min-width: 768px) {
+  .restaurant-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .restaurant-card {
+    flex: 34%;
+    margin: 0 10px 20px 0;
+  }
+}
+@media (min-width: 1440px) {
+  .restaurant-container {
+    flex-wrap: unset;
+  }
+}
 .menu {
   position: relative;
 }
