--- a/public/css/style.css
+++ b/public/css/style.css
@@ -362,6 +362,8 @@ h3 {
   box-shadow: 1px 7px 9px #eaeaea;
   margin-bottom: 15px;
   padding: 10px;
+  -webkit-animation: fadein 1s;
+  animation: fadein 1s;
 }
 .dishes-card__title {
   margin-bottom: 3px;
@@ -372,7 +374,44 @@ h3 {
   padding-right: 10px;
   font-size: 15px;
 }
+.dishes-card--1 {
+  -webkit-animation-delay: 50ms;
+  animation-delay: 50ms;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+.dishes-card--2 {
+  -webkit-animation-delay: 150ms;
+  animation-delay: 150ms;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
+.dishes-card--3 {
+  -webkit-animation-delay: 300ms;
+  animation-delay: 300ms;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  opacity: 0;
+}
 
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@-moz-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .dishes,
 .box-button {
   margin-top: 35px;
