--- a/public/css/style.css
+++ b/public/css/style.css
@@ -356,23 +356,53 @@ h3 {
 .dishes-card {
   display: flex;
   background-color: white;
-  justify-content: space-between;
-  align-items: flex-end;
   border-radius: 15px;
   box-shadow: 1px 7px 9px #eaeaea;
   margin-bottom: 15px;
-  padding: 10px;
   -webkit-animation: fadein 1s;
   animation: fadein 1s;
+  overflow: hidden;
+}
+.dishes-card__description {
+  flex: 1;
+}
+.dishes-card__description, .dishes-card__title, .dishes-card__subtitle {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.dishes-card__description, .dishes-card__price {
+  padding: 10px;
 }
 .dishes-card__title {
   margin-bottom: 3px;
+  min-width: 0;
 }
 .dishes-card__price {
   font-weight: bold;
   color: #353535;
   padding-right: 10px;
   font-size: 15px;
+  margin-left: auto;
+  display: flex;
+  align-items: flex-end;
+}
+.dishes-card__check {
+  margin-right: -60px;
+  width: 60px;
+  background-color: #99e2d0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+.dishes-card:hover .dishes-card__check {
+  margin-right: 0;
+  transition: margin-right 0.6s;
+}
+.dishes-card:hover .dishes-card__check .fas {
+  transform: rotate(360deg);
+  transition: 0.4s ease-in-out;
 }
 .dishes-card--1 {
   -webkit-animation-delay: 50ms;
