--- a/sass/layout/_heart-icons.scss
+++ b/sass/layout/_heart-icons.scss
@@ -9,8 +9,17 @@
     -webkit-background-clip: text;
     opacity: 0;
     transition: all 300ms ease-out;
+    &:active {
+      opacity: 1;
+      transform: scale(1.2);
+    }
+  }
+
+@media (min-width: 1024px) {
+  .restaurant-card__icon .fas, .food__icon .fas {
     &:hover {
       opacity: 1;
       transform: scale(1.2);
     }
   }
+}
