--- a/public/css/style.css
+++ b/public/css/style.css
@@ -376,10 +376,11 @@ h3 {
 @media (min-width: 1024px) {
   .dish-types {
     display: flex;
+    justify-content: center;
   }
 
   .dishes {
-    flex: 30%;
+    width: 30%;
   }
 
   .dishes:not(:last-child) {
@@ -446,11 +447,11 @@ h3 {
   justify-content: center;
   color: white;
 }
-.dishes-card:hover .dishes-card__check {
+.dishes-card:active .dishes-card__check {
   margin-right: 0;
   transition: margin-right 0.6s;
 }
-.dishes-card:hover .dishes-card__check .fas {
+.dishes-card:active .dishes-card__check .fas {
   transform: rotate(360deg);
   transition: 0.4s ease-in-out;
 }
@@ -497,6 +498,16 @@ h3 {
   }
   to {
     opacity: 1;
+  }
+}
+@media (min-width: 1024px) {
+  .dishes-card:hover .dishes-card__check {
+    margin-right: 0;
+    transition: margin-right 0.6s;
+  }
+  .dishes-card:hover .dishes-card__check .fas {
+    transform: rotate(360deg);
+    transition: 0.4s ease-in-out;
   }
 }
 .dishes,
