--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -38,10 +38,11 @@
 @media (min-width: 1024px) {
   .dish-types {
     display: flex;
+    justify-content: center;
   }
 
   .dishes {
-    flex: 30%;
+    width: 30%;
   }
 
   .dishes:not(:last-child) {
@@ -111,7 +112,7 @@
     justify-content: center;
     color: white;
   }
-  &:hover .dishes-card__check {
+  &:active .dishes-card__check {
     margin-right: 0;
     transition: margin-right 0.6s;
     .fas {
@@ -164,6 +165,19 @@
   }
   to {
     opacity: 1;
+  }
+}
+
+@media (min-width: 1024px) {
+  .dishes-card {
+    &:hover .dishes-card__check {
+      margin-right: 0;
+      transition: margin-right 0.6s;
+      .fas {
+        transform: rotate(360deg);
+        transition: 0.4s ease-in-out;
+      }
+    }
   }
 }
 
