--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,8 @@
-// @import-normalize;
 @import "./utils/variables";
 @import "./base/typography";
 @import "./base/base";
 @import "./component/buttons";
-@import "./layout/heart-icons";
+@import "./component/heart-icons";
 @import "./layout/header";
 @import "./layout/footer";
 @import "./pages/home";
